# QLayoutEDA

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  init-git.ps1  init-git.sh  render_error.txt
.github/: CODEOWNERS  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  task.yml
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  Architecture_Refactor_Plan.md  GITHUB_WORKFLOW.md  KLAYOUT_RENDER_REFERENCE.md  KLayout_Cache_Strategy.md  KLayout_Render_Analysis.md  KLayout_Render_Deep_Analysis.md  KLayout_Render_Optimization_Implementation.md  KLayout_Zoom_Optimization.md  RENDER_OPTIMIZATION.md  SELECTION_IMPLEMENTATION.md
include/core/: Types.h
include/interfaces/: ICoordinateSystem.h  IGDSParser.h  IRenderEngine.h  ISpatialIndex.h
src/: main.cpp
src/core/: Types.cpp
src/graphic/: CellRenderCache.cpp  CellRenderCache.h  CoordinateSystem.cpp  CoordinateSystem.h  GeometryAlgorithms.cpp  GeometryAlgorithms.h  LayerManager.cpp  LayerManager.h  QuadTree.cpp  QuadTree.h  RenderCoordinator.cpp  RenderCoordinator.h  RenderEngine.cpp  RenderEngine.h  RenderWorker.cpp  RenderWorker.h  SelectionEngine.cpp  SelectionEngine.h  SpatialIndex.cpp  SpatialIndex.h
src/parser/: GDSFormat.cpp  GDSFormat.h  GDSParser.cpp  GDSParser.h  GDSStreamParser.cpp  GDSStreamParser.h
src/test/: create_multi_cell_gds.cpp  test_cell_hierarchy.cpp  test_cell_refs.cpp  test_deep_diagnose.cpp  test_diagnose.cpp  test_fast_parse.cpp  test_quadtree.cpp  test_render_diagnose.cpp  test_show_structs.cpp
src/ui/: CanvasWidget.cpp  CanvasWidget.h  CellListPanel.cpp  CellListPanel.h  ImageCache.h  LayerPanel.cpp  LayerPanel.h  MainWindow.cpp  MainWindow.h  PropertyPanel.cpp  PropertyPanel.h
tests/: CMakeLists.txt  TEST_REPORT.md  TestCoordinateSystem.cpp  TestGDSParser.cpp  TestIntegration.cpp  TestSpatialIndex.cpp  TestTypes.cpp  analyze_hierarchy.cpp  diagnose_large.cpp  diagnose_records.cpp  test_cell_hierarchy.cpp  test_debug.cpp  test_debug2.cpp  test_full.cpp  test_large.cpp  test_real_gds.cpp  test_ref_detail.cpp  test_refs.cpp  test_render.cpp  test_scan_debug.cpp  test_selection.cpp  test_simple.cpp  test_sref_render.cpp  test_stream_parser.cpp
tests/data/: README.md  generate_test_gds.py  list_cells.cpp  minimal.gds
